added some changes in the home page

--- a/gas_booking/templates/home.html
+++ b/gas_booking/templates/home.html
@@ -62,7 +62,7 @@
                     {% csrf_token %}
                     <div class="input-field">
                         {{ formL.username}}
-                        <label>Email OR Username</label>
+                        <label> Username</label>
                     </div>
                     <div class="input-field">
                         {{formL.password}}
@@ -129,6 +129,8 @@
             </div>
         </div>
     </div>
-
+    <div style="height:500px;display:flex;justify-content:center;align-items:center;color:white;">
+        <h1>Welcome to Gas Utility Services</h1>
+    </div>
 </body>
 </html>
